Fix build versionCode and some line errors